--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,8 @@ p{
     position:absolute;
     left:300px;
     top: 115px;
+    border: 3px solid, red;
+    
 }
 
 .bars{
@@ -26,6 +28,7 @@ p{
     position: absolute;
     z-index: -1;
     background: #fd5415;
+    border-style: outset;
     width: 87%;
     left: 0px;
     top: 200px;
@@ -36,13 +39,14 @@ p{
     position: absolute;
     z-index: -2;
     background: #1595fd;
+    border-style: outset;
     width: 89%;
     left: 10px;
     top: 290px;
     height: 100px;
 }
 
-.imgage{
+.image{
 
 }
 
@@ -52,3 +56,18 @@ p{
     right:0;
 }
 
+#coming-soon{
+    position: relative;
+}
+
+/*Styles for the NFL game selector page*/
+.games{
+    background-image: linear-gradient(to right, brown, green);
+}
+.games-header{
+    color:white;
+
+}
+.games-p{
+    color:white;
+}
