--- a/styles.css
+++ b/styles.css
@@ -10,12 +10,16 @@ p{
     font-size: xx-large;
 }
 
+.header:hover{
+
+}
+
 .header{
     font-size:900%;
     color:white;
     text-shadow: 5px 5px #011a2e;
     position:absolute;
-    left:300px;
+    left:6%;
     top: 115px;
     border: 3px solid, red;
     
