--- a/styles.css
+++ b/styles.css
@@ -7,22 +7,8 @@ body{
 }
 
 p{
-    font-size: xx-large;
-}
-
-.header:hover{
-
-}
-
-.header{
-    font-size:900%;
     color:white;
-    text-shadow: 5px 5px #011a2e;
-    position:absolute;
-    left:6%;
-    top: 115px;
-    border: 3px solid, red;
-    
+    font-size: xx-large;
 }
 
 .bars{
@@ -36,7 +22,7 @@ p{
     width: 87%;
     left: 0px;
     top: 200px;
-    height: 100px;
+    height: 145px;
 }
 
 .blue-bar{
@@ -46,8 +32,8 @@ p{
     border-style: outset;
     width: 89%;
     left: 10px;
-    top: 290px;
-    height: 100px;
+    top: 310px;
+    height: 150px;
 }
 
 .image{
@@ -66,7 +52,7 @@ p{
 
 /*Styles for the NFL game selector page*/
 .games{
-    background-image: linear-gradient(to right, brown, green);
+    background-image: linear-gradient(to right, brown, rgb(250, 114, 3));
 }
 .games-header{
     color:white;
@@ -75,3 +61,48 @@ p{
 .games-p{
     color:white;
 }
+
+/*slider frames*/
+.header{
+    font-size:120px;
+    color:white;
+    text-shadow: 5px 5px #011a2e;
+    position:absolute;
+    left:6%;
+    top: 114px;
+    .carousel-container{
+        overflow:hidden;
+        position:relative;
+        float:right;
+        height: 148px;
+        padding-top: 0px;
+        margin-top: 8px;
+        li{
+          font-family: inherit;
+          font-weight: 700;
+          padding: 0 10px;
+          height: 45px;
+          margin-bottom: 55px;
+          display: block;
+          
+      }
+    }
+
+}
+
+.flip2 {animation: flip2 4s cubic-bezier(0.1,0.2,0.2,0.1) infinite;}
+
+@keyframes flip2 {
+    0% {margin-top: 0px;}
+    50%{margin-top: 0px;}
+    100%{margin-top: -140px;}
+    /*
+    0% { margin-top: -140px; }
+    5% { margin-top: -100px;  }
+    50% { margin-top: -70px; }
+    55% { margin-top: 0px; }
+    99.99% { margin-top: 0px; }
+    100% { margin-top: -140px; } */
+    */
+}
+
